--- a/all_progress.ipynb
+++ b/all_progress.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a700f917",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7b377f88",
    "metadata": {},
    "outputs": [
@@ -284,14 +284,26 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# import dataset from csv to python \n",
     "df = pd.read_csv(r\"C:\\bioinfo2\\p4b\\project\\Pancrease_Cancer_Prediction\\pancreatic_cancer_prediction_sample.csv\")\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ccedfc1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export dataset \n",
+    "df.to_csv(\"pancreatic_cancer_data_processed.csv\", index=False)\n"
    ]
   },
   {
@@ -680,6 +692,269 @@
     "  - Data normalization (centering/scaling)\n",
     "  - Binning\n",
     "  - Indicator variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "84c213dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing Value (%)\n",
+      "Country                          0.0\n",
+      "Age                              0.0\n",
+      "Gender                           0.0\n",
+      "Smoking_History                  0.0\n",
+      "Obesity                          0.0\n",
+      "Diabetes                         0.0\n",
+      "Chronic_Pancreatitis             0.0\n",
+      "Family_History                   0.0\n",
+      "Hereditary_Condition             0.0\n",
+      "Jaundice                         0.0\n",
+      "Abdominal_Discomfort             0.0\n",
+      "Back_Pain                        0.0\n",
+      "Weight_Loss                      0.0\n",
+      "Development_of_Type2_Diabetes    0.0\n",
+      "Stage_at_Diagnosis               0.0\n",
+      "Survival_Time_Months             0.0\n",
+      "Treatment_Type                   0.0\n",
+      "Survival_Status                  0.0\n",
+      "Alcohol_Consumption              0.0\n",
+      "Physical_Activity_Level          0.0\n",
+      "Diet_Processed_Food              0.0\n",
+      "Access_to_Healthcare             0.0\n",
+      "Urban_vs_Rural                   0.0\n",
+      "Economic_Status                  0.0\n",
+      "dtype: float64\n",
+      "\n",
+      "Duplicate Row (%)\n",
+      "8e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "# missing value and duplicate value check\n",
+    "print('Missing Value (%)')\n",
+    "print(df.isna().mean()*100)\n",
+    "print('\\nDuplicate Row (%)')\n",
+    "print(df.duplicated().mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c44a5264",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows BEFORE removal: 4\n",
+      "Number of duplicate rows AFTER removal: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of duplicate rows BEFORE removal:\", df.duplicated().sum())\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "print(\"Number of duplicate rows AFTER removal:\", df.duplicated().sum())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9d0b554e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['country', 'age', 'gender', 'smoking_history', 'obesity', 'diabetes',\n",
+      "       'chronic_pancreatitis', 'family_history', 'hereditary_condition',\n",
+      "       'jaundice', 'abdominal_discomfort', 'back_pain', 'weight_loss',\n",
+      "       'development_of_type2_diabetes', 'stage_at_diagnosis',\n",
+      "       'survival_time_months', 'treatment_type', 'survival_status',\n",
+      "       'alcohol_consumption', 'physical_activity_level', 'diet_processed_food',\n",
+      "       'access_to_healthcare', 'urban_vs_rural', 'economic_status'],\n",
+      "      dtype='object')\n",
+      "['female' 'male']\n",
+      "['Stage_III' 'Stage_IV' 'Stage_II' 'Stage_I']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# standardise column names and text values for stage_at_diagnosis\n",
+    "df.columns = df.columns.str.lower()\n",
+    "df['gender'] = df['gender'].str.lower()\n",
+    "df['stage_at_diagnosis'] = df['stage_at_diagnosis'].str.replace(' ', '_')\n",
+    "\n",
+    "print(df.columns)\n",
+    "print(df['gender'].unique())\n",
+    "print(df['stage_at_diagnosis'].unique())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9f46a1ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                age  survival_time_months\n",
+      "count  4.999600e+04          4.999600e+04\n",
+      "mean   3.612688e-16         -4.093054e-17\n",
+      "std    1.000010e+00          1.000010e+00\n",
+      "min   -3.463106e+00         -1.144306e+00\n",
+      "25%   -6.558025e-01         -7.007351e-01\n",
+      "50%    4.602341e-02         -3.458782e-01\n",
+      "75%    6.475885e-01          4.525496e-01\n",
+      "max    2.552545e+00          4.001118e+00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data normalization\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "df[['age', 'survival_time_months']] = scaler.fit_transform(\n",
+    "    df[['age', 'survival_time_months']]\n",
+    ")\n",
+    "\n",
+    "print(df[['age', 'survival_time_months']].describe())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ea67068d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        age    age_group\n",
+      "0 -0.054237  Middle-aged\n",
+      "1  1.249154      Elderly\n",
+      "2  0.647588      Elderly\n",
+      "3 -0.856324  Middle-aged\n",
+      "4  1.750458      Elderly\n",
+      "5 -1.558150        Young\n",
+      "6  0.246545      Elderly\n",
+      "7 -0.856324  Middle-aged\n",
+      "8 -1.457889        Young\n",
+      "9 -1.157107        Young\n",
+      "age_group\n",
+      "Elderly        25158\n",
+      "Middle-aged    16994\n",
+      "Young           7776\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# binning age column\n",
+    "df['age_group'] = pd.cut(\n",
+    "    df['age'],\n",
+    "    bins=[-3, -1, 0, 3],   # scaled values after StandardScaler\n",
+    "    labels=['Young', 'Middle-aged', 'Elderly']\n",
+    ")\n",
+    "\n",
+    "print(df[['age', 'age_group']].head(10))\n",
+    "print(df['age_group'].value_counts())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2d3e7a00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['country', 'age', 'smoking_history', 'obesity', 'diabetes',\n",
+      "       'chronic_pancreatitis', 'family_history', 'hereditary_condition',\n",
+      "       'jaundice', 'abdominal_discomfort', 'back_pain', 'weight_loss',\n",
+      "       'development_of_type2_diabetes', 'survival_time_months',\n",
+      "       'survival_status', 'alcohol_consumption', 'physical_activity_level',\n",
+      "       'diet_processed_food', 'access_to_healthcare', 'economic_status',\n",
+      "       'age_group', 'gender_male', 'treatment_type_Radiation',\n",
+      "       'treatment_type_Surgery', 'stage_at_diagnosis_Stage_II',\n",
+      "       'stage_at_diagnosis_Stage_III', 'stage_at_diagnosis_Stage_IV',\n",
+      "       'urban_vs_rural_Urban'],\n",
+      "      dtype='object')\n",
+      "         country       age  smoking_history  obesity  diabetes  \\\n",
+      "0         Canada -0.054237                0        0         0   \n",
+      "1   South Africa  1.249154                1        1         0   \n",
+      "2          India  0.647588                0        0         0   \n",
+      "3        Germany -0.856324                0        0         0   \n",
+      "4  United States  1.750458                0        0         0   \n",
+      "\n",
+      "   chronic_pancreatitis  family_history  hereditary_condition  jaundice  \\\n",
+      "0                     0               0                     0         0   \n",
+      "1                     0               0                     0         0   \n",
+      "2                     0               0                     0         0   \n",
+      "3                     0               1                     0         1   \n",
+      "4                     0               1                     0         0   \n",
+      "\n",
+      "   abdominal_discomfort  ...  access_to_healthcare  economic_status  \\\n",
+      "0                     0  ...                  High              Low   \n",
+      "1                     0  ...                Medium              Low   \n",
+      "2                     0  ...                   Low           Middle   \n",
+      "3                     0  ...                Medium           Middle   \n",
+      "4                     0  ...                Medium              Low   \n",
+      "\n",
+      "     age_group  gender_male  treatment_type_Radiation  treatment_type_Surgery  \\\n",
+      "0  Middle-aged        False                     False                    True   \n",
+      "1      Elderly         True                     False                   False   \n",
+      "2      Elderly        False                     False                   False   \n",
+      "3  Middle-aged         True                      True                   False   \n",
+      "4      Elderly        False                     False                   False   \n",
+      "\n",
+      "  stage_at_diagnosis_Stage_II stage_at_diagnosis_Stage_III  \\\n",
+      "0                       False                         True   \n",
+      "1                       False                         True   \n",
+      "2                       False                        False   \n",
+      "3                       False                        False   \n",
+      "4                       False                        False   \n",
+      "\n",
+      "  stage_at_diagnosis_Stage_IV urban_vs_rural_Urban  \n",
+      "0                       False                 True  \n",
+      "1                       False                 True  \n",
+      "2                        True                False  \n",
+      "3                        True                False  \n",
+      "4                        True                False  \n",
+      "\n",
+      "[5 rows x 28 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# indicator variable \n",
+    "df_encoded = pd.get_dummies(\n",
+    "    df,\n",
+    "    columns=['gender', 'treatment_type', 'stage_at_diagnosis', 'urban_vs_rural'],\n",
+    "    drop_first=True\n",
+    ")\n",
+    "\n",
+    "print(df_encoded.columns)\n",
+    "print(df_encoded.head())\n",
+    "\n"
    ]
   }
  ],
