--- a/all_progress.ipynb
+++ b/all_progress.ipynb
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c44a5264",
    "metadata": {},
    "outputs": [
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "9f46a1ca",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
      "text": [
       "                age  survival_time_months\n",
       "count  4.999600e+04          4.999600e+04\n",
-      "mean   3.612688e-16         -4.093054e-17\n",
+      "mean  -1.449623e-17         -1.705439e-17\n",
       "std    1.000010e+00          1.000010e+00\n",
       "min   -3.463106e+00         -1.144306e+00\n",
       "25%   -6.558025e-01         -7.007351e-01\n",
@@ -821,6 +821,92 @@
       "75%    6.475885e-01          4.525496e-01\n",
       "max    2.552545e+00          4.001118e+00\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>survival_time_months</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>49996.000000</td>\n",
+       "      <td>49996.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.000010</td>\n",
+       "      <td>1.000010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>-3.463106</td>\n",
+       "      <td>-1.144306</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>-0.655803</td>\n",
+       "      <td>-0.700735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.046023</td>\n",
+       "      <td>-0.345878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.647588</td>\n",
+       "      <td>0.452550</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2.552545</td>\n",
+       "      <td>4.001118</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                age  survival_time_months\n",
+       "count  49996.000000          49996.000000\n",
+       "mean      -0.000000             -0.000000\n",
+       "std        1.000010              1.000010\n",
+       "min       -3.463106             -1.144306\n",
+       "25%       -0.655803             -0.700735\n",
+       "50%        0.046023             -0.345878\n",
+       "75%        0.647588              0.452550\n",
+       "max        2.552545              4.001118"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -832,8 +918,13 @@
     "    df[['age', 'survival_time_months']]\n",
     ")\n",
     "\n",
+    "# actual\n",
     "print(df[['age', 'survival_time_months']].describe())\n",
-    "\n"
+    "\n",
+    "# rounded\n",
+    "desc = df[['age', 'survival_time_months']].describe()\n",
+    "desc.loc['count'] = desc.loc['count'].astype(int)\n",
+    "desc.round(10)"
    ]
   },
   {
